--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.81.2",
+    "@tanstack/react-query-devtools": "^5.81.2",
+    "axios": "^1.10.0",
     "classnames": "^2.5.1",
     "date-fns": "^4.1.0",
     "i18next": "^25.1.2",
