--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.81.5",
+    "axios": "^1.10.0",
     "classnames": "^2.5.1",
     "date-fns": "^4.1.0",
     "i18next": "^25.1.2",
@@ -19,6 +21,7 @@
     "react-dom": "^19.1.0",
     "react-i18next": "^15.5.1",
     "react-router-dom": "^7.6.0",
+    "react-toastify": "^11.0.5",
     "swiper": "^11.2.8"
   },
   "devDependencies": {
